--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,17 @@
-version: "3"
+version: '3'
 services:
   web:
     build: .
     ports:
-      - "80:80"
-    volumes:
-      - .:/var/www/html
+      - "6000:80"
+    links:
+      - db
+  db:
+    image: mysql:8
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: mydb
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
