--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
 version: '3'
 services:
-  web:
-    build: .
-    ports:
-      - "6000:80"
-    links:
-      - db
-  db:
-    image: mysql:8
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: mydb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    ports:
-      - "3306:3306"
+web:
+build: .
+ports:
+- "6000:80"
+environment:
+- DB_HOST=db
+- DB_PORT=3306
+- DB_USER=user
+- DB_PASSWORD=
+- DB_DATABASE=newsletter_db
+links:
+- db
+db:
+image: mysql:8
+environment:
+MYSQL_ROOT_PASSWORD: root
+MYSQL_DATABASE: mydb
+MYSQL_USER: user
+MYSQL_PASSWORD: password
+ports:
+- "3306:3306"
+volumes:
+- ./.env:/var/www/html/.env
+command: --default-authentication-plugin=mysql_native_password
