--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "symfony/mailer": "^6.2"
+        "symfony/mailer": "^6.2",
+        "vlucas/phpdotenv": "^5.5"
     }
 }
