--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,35 @@
-version: '3'
+version: "3"
 services:
-web:
-build: .
-ports:
-- "6000:80"
-environment:
-- DB_HOST=db
-- DB_PORT=3306
-- DB_USER=user
-- DB_PASSWORD=
-- DB_DATABASE=newsletter_db
-links:
-- db
-db:
-image: mysql:8
-environment:
-MYSQL_ROOT_PASSWORD: root
-MYSQL_DATABASE: mydb
-MYSQL_USER: user
-MYSQL_PASSWORD: password
-ports:
-- "3306:3306"
-volumes:
-- ./.env:/var/www/html/.env
-command: --default-authentication-plugin=mysql_native_password
+  web:
+    build: .
+    ports:
+      - "80:80"
+    volumes:
+      - .:/var/www/html
+    environment:
+      - MYSQL_HOST=db
+      - MYSQL_DATABASE=newsletter_db
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=""
+      - MAILER_URL=smtp://smtp.gmail.com:587
+      - MAILER_ENCRYPTION=tls
+      - MAILER_USER=myemail@gmail.com
+      - MAILER_PASSWORD=mypassword
+    depends_on:
+      - db
+  db:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=""
+      - MYSQL_DATABASE=newsletter_db
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=""
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    external:
+      name: mynetwork
