--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     build: .
     ports:
-      - "80:80"
+      - "90:90"
     volumes:
       - .:/var/www/html
     environment:
@@ -13,8 +13,8 @@ services:
       - MYSQL_PASSWORD=""
       - MAILER_URL=smtp://smtp.gmail.com:587
       - MAILER_ENCRYPTION=tls
-      - MAILER_USER=myemail@gmail.com
-      - MAILER_PASSWORD=mypassword
+      - MAILER_USER=${MAILER_USER}
+      - MAILER_PASSWORD=${MAILER_PASSWORD}
     depends_on:
       - db
   db:
@@ -24,12 +24,5 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=""
       - MYSQL_DATABASE=newsletter_db
-      - MYSQL_USER=root
       - MYSQL_PASSWORD=""
-    networks:
-      - mynetwork
-
-networks:
-  mynetwork:
-    external:
-      name: mynetwork
+      - MYSQL_ALLOW_EMPTY_PASSWORD=true
